add a Done page at /done

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -35,6 +35,7 @@
 
 // Import page specific styles
 @import "pages/home";
+@import "pages/done";
 
 // Import part specific styles
 @import "parts/schedule";
