add some basic info to the Done page, improve styles

--- a/styles/pages/done.less
+++ b/styles/pages/done.less
@@ -1,5 +1,10 @@
 .done {
-  height: 100vh - @footer-height;
+  min-height: 100vh - @footer-height;
+  padding-bottom: 10vh;
+
+  section {
+    padding-bottom: 7vh;
+  }
 
   a {
     color: @grey-white;
