fix Done for large screens

--- a/styles/pages/done.less
+++ b/styles/pages/done.less
@@ -2,8 +2,9 @@
   min-height: 100vh - @footer-height;
   padding-bottom: 10vh;
 
-  section {
-    padding-bottom: 7vh;
+  h2,
+  ul {
+    padding-bottom: 5vh;
   }
 
   a {
